--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,45 @@
-td {
+/*td {
     background: #82e487;
     padding: 15 px;
+}
+
+*/
+
+body{
+ 
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+table{
+    position: absolute;
+    top: 180px;
+    margin-left: 10%;
+    width: 80%;
+    height: 50%;
+
+}
+.input1 {
+    position: absolute;
+    width: 75%;
+    height: 40px;
+    left: 10%;
+    border-radius: 10px;
+    padding: 20px;
+    top:100px;
+}
+
+
+
+#div1 button{
+    position: absolute;
+    right: 10%;
+    top: 100px;
+}
+h1 {
+    color:#641E16;
+    font-weight: bold;
+
 }
