--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,47 @@
-
+<body>
   <h1>
     {{title}}
   </h1>
-
- <input type= 'text' #newTodo />
-<button (click)="addTodo(newTodo.value)">Add</button>
-
-<table >
+<div id="div1">
+  <input class="input1" type= 'text' #newTodo placeholder="Enter new housework"/>
+  <button class="btn btn-success" 
+  (click)="addTodo(newTodo.value)">Add</button>
+</div>
+<table class="table table-dark table-striped">
 <tr >
     <th>ID</th>
     <th>Housework</th>
     <th>Complete</th>
-    <th>Actions</th>
+    <th colspan="2" style="text-align:center">Actions</th>
 </tr>
-<tr *ngFor = "let newTodo of todo" >
+<tr *ngFor = "let newTodo of todo">
     <td>{{newTodo.id}}</td>
     <td>{{newTodo.label}}</td>
-    <td>{{newTodo.done ? '&#10003;' : '&#10005;'}}</td>
+    <td><input type="checkbox" 
+      name="isActive" 
+      value="{{newTodo.label}}"
+      (change)="newFunction(newTodo.label)"></td>
     <td>
-      <button (click)="deleteTodo(newTodo)">delete</button>
+      <button class="btn btn-danger" (click)="deleteTodo(newTodo)">delete</button>
+    </td>
+    <td>
+      <button class="btn btn-info" (click)="editTask(newTodo.id)">edit</button>
     </td>
 </tr>
 </table>
+
+</body>
+<!--
+<h3>Tareas Realizadas</h3>
+<table>
+    <tr>
+      <th>Housework</th>
+    </tr>
+
+    <tr *ngIf="checkbox" *ngFor="let newTodo of todo">
+        <td>{{newTodo.label}}</td>
+      </tr>
+
+</table>
+
+-->
